# analysis-mufora-sensor-data

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
aux/: data.py  detect.py  draw.py  filters.py  settings.py  summary.py  table.py
data/calib/: 2024-02-26.json  2024-02-27.json  2024-02-28.json  2024-05-27.json  2024-05-28.json  2024-05-29.json
data/fog/: 2024_02_28_10_40_53_fog.csv  2024_02_28_11_07_24_fog.csv  2024_02_28_11_27_25_fog.csv  2024_02_28_12_05_33_fog.csv  2024_02_28_13_20_59_fog.csv  2024_02_28_13_40_39_fog.csv  2024_02_28_14_10_36_fog.csv  2024_02_28_14_33_34_fog.csv  2024_02_28_14_58_42_fog.csv  2024_05_29_09_19_52_fog.csv  2024_05_29_09_50_59_fog.csv  2024_05_29_10_18_55_fog.csv  2024_05_29_10_49_11_fog.csv  2024_05_29_11_23_29_fog.csv
figures/: reprojection_error.py  samples.py  weather_impact.py
mufora/: aux.py  data.py  detect.py  draw.py  filters.py  pose.py  settings.py  table.py
scripts/: eval_2d.py  eval_3d.py  fog.py  gt_2d.py  gt_3d.py  metadata_2d.py  metadata_3d.py
scripts/analysis/: eval_2d.py  eval_3d.py  gt_2d.py
scripts/figures/: fog.py  reprojection_error.py  samples.py  weather_impact.py
scripts/info/: correlation_metrics.py
scripts/table/: correlation_metrics.py
tests/: test_table.py
